--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@react-email/components": "^0.0.11",
+    "@swc/core": "^1.7.26",
     "@tanstack/react-query": "4.29.13",
     "@trpc/client": "^10.43.1",
     "@trpc/next": "^10.43.1",
@@ -39,9 +40,10 @@
     "clsx": "^2.0.0",
     "cross-env": "^7.0.3",
     "date-fns": "^2.30.0",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "lucide-react": "^0.292.0",
+    "mongoose": "^8.7.0",
     "next": "14.0.1",
     "nodemailer": "^6.9.7",
     "payload": "^2.0.15",
